Added 'reset' button to HTML and untagled board

--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
       </div>
 
       <!-- Start button -->
-      <button id="start-btn">Start</button>
+      <h2 id="start-btn">Start</h2>
+
+      <!-- Reset button -->
+      <button id="reset-btn" class="hide">Reset</button>
     </div>
   </body>
 </html>
