Created game-functions.js, linked it to HTML and created basic variables and functions

--- a/index.html
+++ b/index.html
@@ -62,5 +62,8 @@
       <!-- Reset button -->
       <button id="reset-btn" class="hide">Reset</button>
     </div>
+
+    <!-- Scripts -->
+    <script src="game-functions.js"></script>
   </body>
 </html>
