Changed order between 'turn' div and 'reset-btn' button

--- a/index.html
+++ b/index.html
@@ -62,8 +62,18 @@
       <!-- Start button -->
       <h2 id="start-btn">Start</h2>
 
+      <!-- Who plays -->
+      <div id="turn">
+        <h3 id="turn-txt" class="hide">X plays</h3>
+      </div>
+
       <!-- Reset button -->
-      <button id="reset-btn" class="hide">Reset</button>
+      <button id="reset-btn" class="hide">Play again</button>
+
+      <!-- Points -->
+      <div id="result-div">
+        <h2 id="result-txt"></h2>
+      </div>
     </div>
 
     <!-- Scripts -->
