--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 
       <!-- Points -->
       <div id="result-div">
-        <h2 id="result-txt"></h2>
+        <h2 id="x-result">X: 0</h2>
+        <h2 id="o-result">O: 0</h2>
       </div>
     </div>
 
