Added span tags to victories

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
       <!-- Points -->
       <div id="result-div">
-        <h2 id="x-result">X: 0</h2>
-        <h2 id="o-result">O: 0</h2>
+        <h2 id="x-result">X: <span id="x-victories">0</span></h2>
+        <h2 id="o-result">O: <span id="o-victories">0</span></h2>
       </div>
     </div>
 
