Removed options to change between multiplayer and single player. Game is only multiplayer now

--- a/index.html
+++ b/index.html
@@ -42,23 +42,6 @@
         <div class="cell" id="cell-8"></div>
       </div>
 
-      <!-- Options -->
-      <div id="options">
-        <div id="single-player-div">
-          <input
-            type="radio"
-            name="single-or-multi"
-            id="multi-player"
-            checked
-          />Play with a friend
-        </div>
-
-        <div id="multi-player-div">
-          <input type="radio" name="single-or-multi" id="single-player" />Play
-          against computer
-        </div>
-      </div>
-
       <!-- Start button -->
       <h2 id="start-btn">Start</h2>
 
@@ -78,6 +61,6 @@
     </div>
 
     <!-- Scripts -->
-    <script src="game-functions.js"></script>
+    <script src="multiplayer.js"></script>
   </body>
 </html>
